# gold_tracker

./: .gitignore  README.md  main.py  pyproject.toml
config/: __init__.py  settings.py
core/: __init__.py  scheduler.py
data_sources/: __init__.py  base.py  fx_fetcher.py  lbma_api.py  sge_scraper.py
database/: __init__.py  db_manager.py  fx_repository.py  repository.py  session.py  silver_repository.py
docs/: 个人黄金价格追踪系统需求文档.docx  项目结构与排期.docx
model/: __init__.py  exchange_rate.py  gold_price.py  silver_price.py
test/: test_curd.py  test_lbma_api.py
utils/: backup_manager.py  logger.py
validator/: __init__.py  dynamic_validator.py
